--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 #hidden-link {
-
+  cursor: pointer;
 }
 
-#blackout {
+.blackout {
   width: 100%;
   height: 100%;
   opacity: 0%;
@@ -10,7 +10,7 @@
   top: 0;
   left: 0;
   transition: opacity 0.5s ease;
-  z-index: 9999;
+  z-index: 11;
   pointer-events: none;
 }
 
