--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@
   pointer-events: none;
 }
 
+#iframe-blackout {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .blackout-item {
   position: fixed;
 }
