point animation working

--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,12 @@
 
 #iframe-blackout {
   position: absolute;
+  right: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 0.5s ease, width 0.4s ease, height 0.4s ease;
 }
 
 .blackout-item {
@@ -471,6 +474,8 @@ iframe {
   height: 80vh;
 }
 
+/* Mini-game CSS properties */
+
 #minigame-container {
   display: flex;
   flex-direction: column-reverse;
@@ -481,6 +486,7 @@ iframe {
   max-width: 20%;
   bottom: 2vh;
   right: 2vw;
+  transition: opacity 0.5s ease;
 }
 
 #pointer {
@@ -549,4 +555,48 @@ iframe {
 
 #timed-text {
   color: white;
+}
+
+/* Point counter animation CSS properties */
+#point-counter {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+
+#description-text {
+  color: white;
+  font-size: 1.2vw;
+}
+
+#point-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+.sidebar-point-row {
+  
+}
+
+#point-text {
+  color: white;
+  font-size: 4.2vw;
+  margin-right: 3%;
+  margin-top: 4%;
+  transition: color 0.3s ease;
+}
+
+.sidebar-point-text {
+  color: black;
+  font-size: 2vw;
+}
+
+#point-image {
+  width: 10%;
+  transform: translateY(-40%);
 }
