--- a/styles.css
+++ b/styles.css
@@ -577,10 +577,18 @@ iframe {
   justify-content: center;
   align-items: center;
   width: 50%;
+  transition: opacity 0.8s ease;
 }
 
 .sidebar-point-row {
-  
+  position: absolute;
+  right: 5%;
+  bottom: 10%;
+  background-color: #ffffff;
+  border-radius: 10px;
+  padding: 5%;
+  cursor: pointer;
+  border: 0.4vw solid #F4B831;
 }
 
 #point-text {
@@ -591,12 +599,242 @@ iframe {
   transition: color 0.3s ease;
 }
 
-.sidebar-point-text {
-  color: black;
-  font-size: 2vw;
-}
-
 #point-image {
   width: 10%;
   transform: translateY(-40%);
+}
+
+#sidebar-point-div {
+  width: 25%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  transition: right 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  z-index: 15;
+  background-color: #EFF5FF;
+  border-radius: 10px 0 0 10px;
+}
+
+#sidebar-point-div.toggled {
+  right: 0;
+}
+
+#sidebar-point-div.untoggled {
+  right: -25%;
+}
+
+#sidebar-header {
+  font-size: 2.0vw;
+  font-weight: bold;
+  color: #141134;
+  margin-bottom: 0.2vw;
+  margin-top: 0.2vw;
+}
+
+#mini-sidebar-point-row {
+  background-color: transparent;
+  border: none;
+  right: unset;
+  bottom: unset;
+  top: 0.5vw;
+  left: 0.5vw;
+  z-index: 16;
+  opacity: 1.0;
+  display: flex;
+  flex-direction: row;
+  width: 8vw;
+  cursor: auto;
+  margin-top: 0.7vw;
+}
+
+#mini-sidebar-point-text {
+  font-size: 0.8vw;
+}
+
+#mini-sidebar-point-img {
+  width: 1vw;
+  height: 1vw;
+  overflow: unset;
+  overflow-clip-margin: unset;
+}
+
+#sidebar-close-button {
+  top: 0.5vw;
+  right: 0.5vw;
+  margin: 2%;
+  font-size: 1vw;
+}
+
+.close-button {
+  position: absolute;
+  color: #ffffff;
+  background-color: #141134;
+  cursor: pointer;
+  border: none;
+  border-radius: 2px;
+  padding: .8% 2.2%;
+}
+
+#sidebar-hero-img {
+  width: 100%;
+}
+
+#sidebar-tabs-div {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.sidebar-tab-button {
+  border: none;
+  background-color: transparent;
+  border-radius: 3px;
+  font-size: 1.4vw;
+  font-family: "Roboto Mono";
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.sidebar-tab-button.toggled {
+  color: white;
+  background-color: #141134;
+  padding: 1% 2%;
+}
+
+.sidebar-tab-button.untoggled {
+  color: #787878;
+}
+
+.sidebar-tab-button:hover {
+  cursor: pointer;
+  color: white;
+  background-color: #141134;
+  padding: 1% 2%;
+}
+
+#prizes-tab {
+  margin-top: 2%;
+}
+
+#rankings-tab {
+
+}
+
+.sidebar-tab {
+  flex-direction: column;
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.sidebar-tab.toggled {
+  display: flex;
+}
+
+.sidebar-tab.untoggled {
+  display: none;
+}
+
+#sidebar-signup-button {
+  bottom: 1.2vw;
+  right: unset;
+  margin-top: 1vw;
+  position: absolute;
+  font-size: 1.6vw;
+}
+
+#prize-header {
+  color: #141134;
+  font-size: 1.5vw;
+  font-weight: bold;
+  width: 70%;
+  margin-bottom: 1.0vw;
+}
+
+#prize-hero-container {
+  background-color: #ffffff;
+  padding: 5%;
+  width: 80%;
+  border-radius: 1vw;
+  border: 0.3vw solid #F4B831;
+}
+
+#prize-hero-img {
+  width: 90%;
+  height: auto;
+}
+
+#prize-footer {
+  margin-top: 0.6vw;
+  margin-bottom: 0.8vw;
+  font-size: 2vw;
+}
+
+#signup-cta-text {
+  color: #141134;
+  margin: 0.4vw;
+  font-size: 1.3vw;
+}
+
+#rankings-tab {
+  margin-top: 1vw;
+  width: 95%;
+}
+
+#ranking-categories-div {
+  width: 100%;
+}
+
+.ranking-container-element {
+  display: flex;
+  flex-direction: row;
+  border: 0.2vw solid #141134;
+  background-color: rgba(20, 17, 52, 0.6);
+  border-radius: 3vw;
+  color: white;
+  width: 80%;
+  justify-content: space-around;
+}
+
+.ranking-category-text {
+  color: white;
+  font-size: 0.9vw;
+  margin: 0.5vw 0;
+  font-weight: bold;
+}
+
+#placements-div {
+
+}
+
+.placement-row {
+
+}
+
+.placement-row img {
+
+}
+
+.placement-row p {
+  font-size: 1.2vw;
+  margin-left: 1vw;
+}
+
+.placement-row p.username {
+
+}
+
+.placement-row p.points {
+
+}
+
+#more-ranks-button {
+  font-size: 0.8vw;
+  text-align: center;
+  width: 20%;
 }
