--- a/styles.css
+++ b/styles.css
@@ -373,6 +373,10 @@ body {
   background-color: white;
   transform: translateY(-4vh);
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #lol {
@@ -385,6 +389,7 @@ body {
 #signup-caption {
   font-weight: bold;
   font-size: 1.8em;
+  text-align: center;
 }
 
 #signup-cta {
